# Cornell-Box

./: CMakeLists.txt  CMakePresets.json  README.md  imgui.ini
include/: shader.h
shaders/: cornell.fs  cornell.vs
src/: main.cpp
